ref genetic interaction section

--- a/docs/background.tex
+++ b/docs/background.tex
@@ -156,10 +156,11 @@ terms of the parameters \(r\), \(K\), and \(P\) \citep{Addinall2011}.
 \subsection{Fitness Screening in Functional Genomics}
 \label{sec:genetic-interaction}
 Fitness screening using cultures grown on solid agar has important uses in functional
-genomics for inferring genetic interactions, drug responses, and response to environmental
-conditions and can be carried out on a genome wide scale. For example,
-\citet{Costanzo2010} use SGA data to construct a genetic interaction map for
-\textasciitilde 75\% of the \textit{S. cerevisiae} genome.
+genomics for inferring genetic interactions, response to environmental conditions drug
+responses, and response to environmental conditions \citep{Addinall2011,Andrew2013} and
+can be carried out on a genome wide scale. For example, \citet{Costanzo2010} use SGA data
+to construct a genetic interaction map for \textasciitilde 75\% of the
+\textit{S. cerevisiae} genome.
 % There exist several methods for inferring genetic interaction strength from fitness
 % measures (see \citet{Mani2008}). Fishers multiplicative model of genetic independence
 % \citep{fisher1919}, used, among others, by \citet{Addinall2011}, states that if two genes,
