Add Gantt chart

--- a/docs/plan.tex
+++ b/docs/plan.tex
@@ -1,7 +1,16 @@
 
 \section{Plan}
 \label{sec:plan}
-gantt chart
+
+\end{multicols}
+\graphicspath{{images_low_res/}}
+\begin{Figure}
+  \centering
+  \includegraphics[width=\linewidth]{gantt_chart}
+  \captionof{figure}{Gantt chart showing project plan. * marks important events.}
+  \label{fig:gantt_chart}
+\end{Figure}
+\begin{multicols}{2}
 flow chart showing cyclical nature of investigation
 
 %%% Local Variables:
