Change figure label spot and pin

--- a/docs/approach.tex
+++ b/docs/approach.tex
@@ -100,6 +100,7 @@ complicated approach, possibly allowing it to propagate further.
 
 List of strains of known fitness??\\
 Specifically what machines do we use for computation?\\
+Can use yzer.ncl.ac.uk for computation: 56 cores, 256Gb RAM, massive GPU.\\
 
 We will investigate unpublished QFA and SGA data for the model
 organism \textit{S. Cerevisiae}. Some data (Figure~\ref{fig:gaps}),
@@ -261,7 +262,7 @@ randomisation when using the independence model.
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{qfa_v_sga_vars}
-  \captionof{figure}{QFA and SGA agars.}
+  \captionof{figure}{Spotted and pinned agars.}
   \label{fig:exp_vars}
 \end{Figure}
 
